--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.4.0'
+        compose_version = '1.5.0-beta02'
+    }
+    dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.45"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
